# gitautobackup

./: .gitignore  README.md  SECURITY.md  gitautobackup.py  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml
